exports[`no-test-inside-hook > invalid(1): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\nbeforeEach(() => { it('a', () => {}); }); 1`] = `

  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
  2 | beforeEach(() => { it('a', () => {}); });

`;

exports[`no-test-inside-hook > invalid(1): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\nbeforeEach(() => { it('a', () => {}); }); 2`] = `

Message:
  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
> 2 | beforeEach(() => { it('a', () => {}); });
    |                    ^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(10): import test from 'node:test';\ntest('o', t => { t.after(() => { test('inner', () => {}); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('o', t => { t.after(() => { test('inner', () => {}); }); });

`;

exports[`no-test-inside-hook > invalid(10): import test from 'node:test';\ntest('o', t => { t.after(() => { test('inner', () => {}); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('o', t => { t.after(() => { test('inner', () => {}); }); });
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(11): import {test, getTestContext} from 'node:test';\ntest('o', t => { getTestContext().after(() => { test('inner', () => {}); }); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('o', t => { getTestContext().after(() => { test('inner', () => {}); }); });

`;

exports[`no-test-inside-hook > invalid(11): import {test, getTestContext} from 'node:test';\ntest('o', t => { getTestContext().after(() => { test('inner', () => {}); }); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('o', t => { getTestContext().after(() => { test('inner', () => {}); }); });
    |                                                 ^^^^^^^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(12): import {test} from 'node:test';\ntest('a', t => { t.beforeEach(() => { t.test('b', () => {}); }); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('a', t => { t.beforeEach(() => { t.test('b', () => {}); }); });

`;

exports[`no-test-inside-hook > invalid(12): import {test} from 'node:test';\ntest('a', t => { t.beforeEach(() => { t.test('b', () => {}); }); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('a', t => { t.beforeEach(() => { t.test('b', () => {}); }); });
    |                                       ^^^^^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(13): import {beforeEach} from 'node:test';\nbeforeEach(t => { t.test('b', () => {}); }); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(t => { t.test('b', () => {}); });

`;

exports[`no-test-inside-hook > invalid(13): import {beforeEach} from 'node:test';\nbeforeEach(t => { t.test('b', () => {}); }); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
> 2 | beforeEach(t => { t.test('b', () => {}); });
    |                   ^^^^^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(14): import {before} from 'node:test';\nbefore(t => { t.test('b', () => {}); }); 1`] = `

  1 | import {before} from 'node:test';
  2 | before(t => { t.test('b', () => {}); });

`;

exports[`no-test-inside-hook > invalid(14): import {before} from 'node:test';\nbefore(t => { t.test('b', () => {}); }); 2`] = `

Message:
  1 | import {before} from 'node:test';
> 2 | before(t => { t.test('b', () => {}); });
    |               ^^^^^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(15): import {before, test} from 'node:test';\nbefore(setup);\nfunction setup() { test('a', () => {}); } 1`] = `

  1 | import {before, test} from 'node:test';
  2 | before(setup);
  3 | function setup() { test('a', () => {}); }

`;

exports[`no-test-inside-hook > invalid(15): import {before, test} from 'node:test';\nbefore(setup);\nfunction setup() { test('a', () => {}); } 2`] = `

Message:
  1 | import {before, test} from 'node:test';
  2 | before(setup);
> 3 | function setup() { test('a', () => {}); }
    |                    ^^^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(16): import {before, test} from 'node:test';\nconst setup = () => { test('a', () => {}); };\nbefore(setup); 1`] = `

  1 | import {before, test} from 'node:test';
  2 | const setup = () => { test('a', () => {}); };
  3 | before(setup);

`;

exports[`no-test-inside-hook > invalid(16): import {before, test} from 'node:test';\nconst setup = () => { test('a', () => {}); };\nbefore(setup); 2`] = `

Message:
  1 | import {before, test} from 'node:test';
> 2 | const setup = () => { test('a', () => {}); };
    |                       ^^^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.
  3 | before(setup);

`;

exports[`no-test-inside-hook > invalid(17): import {before, describe} from 'node:test';\nbefore(setup);\nfunction setup() { describe('a', () => {}); } 1`] = `

  1 | import {before, describe} from 'node:test';
  2 | before(setup);
  3 | function setup() { describe('a', () => {}); }

`;

exports[`no-test-inside-hook > invalid(17): import {before, describe} from 'node:test';\nbefore(setup);\nfunction setup() { describe('a', () => {}); } 2`] = `

Message:
  1 | import {before, describe} from 'node:test';
  2 | before(setup);
> 3 | function setup() { describe('a', () => {}); }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(18): import {beforeEach, test} from 'node:test';\nbeforeEach(setup);\nfunction setup() { test('a', () => {}); } 1`] = `

  1 | import {beforeEach, test} from 'node:test';
  2 | beforeEach(setup);
  3 | function setup() { test('a', () => {}); }

`;

exports[`no-test-inside-hook > invalid(18): import {beforeEach, test} from 'node:test';\nbeforeEach(setup);\nfunction setup() { test('a', () => {}); } 2`] = `

Message:
  1 | import {beforeEach, test} from 'node:test';
  2 | beforeEach(setup);
> 3 | function setup() { test('a', () => {}); }
    |                    ^^^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(19): // A context hook body named out of line still drops the test declared inside it\nimport {test} from 'node:test';\nfunction body() {\n\ttest('x', () => {});\n}\ntest('a', t => {\n\tt.beforeEach(body);\n}); 1`] = `

  1 | // A context hook body named out of line still drops the test declared inside it
  2 | import {test} from 'node:test';
  3 | function body() {
  4 | 	test('x', () => {});
  5 | }
  6 | test('a', t => {
  7 | 	t.beforeEach(body);
  8 | });

`;

exports[`no-test-inside-hook > invalid(19): // A context hook body named out of line still drops the test declared inside it\nimport {test} from 'node:test';\nfunction body() {\n\ttest('x', () => {});\n}\ntest('a', t => {\n\tt.beforeEach(body);\n}); 2`] = `

Message:
  1 | // A context hook body named out of line still drops the test declared inside it
  2 | import {test} from 'node:test';
  3 | function body() {
> 4 | 	test('x', () => {});
    | 	^^^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.
  5 | }
  6 | test('a', t => {
  7 | 	t.beforeEach(body);
  8 | });

`;

exports[`no-test-inside-hook > invalid(2): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\nbefore(() => { test('a', () => {}); }); 1`] = `

  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
  2 | before(() => { test('a', () => {}); });

`;

exports[`no-test-inside-hook > invalid(2): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\nbefore(() => { test('a', () => {}); }); 2`] = `

Message:
  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
> 2 | before(() => { test('a', () => {}); });
    |                ^^^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(3): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\nafterEach(() => { it('a', () => {}); }); 1`] = `

  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
  2 | afterEach(() => { it('a', () => {}); });

`;

exports[`no-test-inside-hook > invalid(3): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\nafterEach(() => { it('a', () => {}); }); 2`] = `

Message:
  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
> 2 | afterEach(() => { it('a', () => {}); });
    |                   ^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(4): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\nbefore(() => { describe('s', () => {}); }); 1`] = `

  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
  2 | before(() => { describe('s', () => {}); });

`;

exports[`no-test-inside-hook > invalid(4): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\nbefore(() => { describe('s', () => {}); }); 2`] = `

Message:
  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
> 2 | before(() => { describe('s', () => {}); });
    |                ^^^^^^^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(5): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\nafter(() => { suite('s', () => {}); }); 1`] = `

  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
  2 | after(() => { suite('s', () => {}); });

`;

exports[`no-test-inside-hook > invalid(5): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\nafter(() => { suite('s', () => {}); }); 2`] = `

Message:
  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
> 2 | after(() => { suite('s', () => {}); });
    |               ^^^^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(6): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\ndescribe('outer', () => { beforeEach(() => { it('a', () => {}); }); }); 1`] = `

  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
  2 | describe('outer', () => { beforeEach(() => { it('a', () => {}); }); });

`;

exports[`no-test-inside-hook > invalid(6): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\ndescribe('outer', () => { beforeEach(() => { it('a', () => {}); }); }); 2`] = `

Message:
  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
> 2 | describe('outer', () => { beforeEach(() => { it('a', () => {}); }); });
    |                                              ^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(7): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\nbeforeEach(() => { if (x) { it('a', () => {}); } }); 1`] = `

  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
  2 | beforeEach(() => { if (x) { it('a', () => {}); } });

`;

exports[`no-test-inside-hook > invalid(7): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\nbeforeEach(() => { if (x) { it('a', () => {}); } }); 2`] = `

Message:
  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
> 2 | beforeEach(() => { if (x) { it('a', () => {}); } });
    |                             ^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(8): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\nbeforeEach(() => { it('a', () => {}); }, {timeout: 1000}); 1`] = `

  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
  2 | beforeEach(() => { it('a', () => {}); }, {timeout: 1000});

`;

exports[`no-test-inside-hook > invalid(8): import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';\nbeforeEach(() => { it('a', () => {}); }, {timeout: 1000}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before, after, beforeEach, afterEach} from 'node:test';
> 2 | beforeEach(() => { it('a', () => {}); }, {timeout: 1000});
    |                    ^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;

exports[`no-test-inside-hook > invalid(9): import test from 'node:test';\ntest('o', t => { t.beforeEach(() => { test('inner', () => {}); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('o', t => { t.beforeEach(() => { test('inner', () => {}); }); });

`;

exports[`no-test-inside-hook > invalid(9): import test from 'node:test';\ntest('o', t => { t.beforeEach(() => { test('inner', () => {}); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('o', t => { t.beforeEach(() => { test('inner', () => {}); }); });
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^ Do not define a test or suite inside a hook. Define it at the top level or inside a \`describe\`.

`;
